Tests/Runtime2/Error/Types/CatchThrow.goal
CatchThrow
- set %throwKey% = %!error.Key%
